web/css/expeditions.css
/* ... */
.expedition-data-header-content select.input-field {
	font-weight: 600;
	color: #00679b;
	text-align: center;
	border-bottom: none;
	-moz-appearance: none;
	-webkit-appearance: none;
	appearance: none;
	pointer-events: none;
}
.expedition-data-header-content {
	display: flex;
	width: 100%;
	font-size: 14px;
    /*margin-bottom: 15px;*/
    /*padding: 0 10px;*/
    height: 45px;
}
.expedition-data-content-body {
	width: 100%;
	height: calc(100% - 60px - 45px);
	padding: 0 10px;
	overflow: auto;
	scroll-behavior: smooth;
}
@media (prefers-reduced-motion) {
	.expedition-data-content-body {scroll-behavior: initial;}
}
.result-details-summary-item {
	padding-right: 10px;
	padding-left: 10px;
}
.result-details-summary-item > * {
	padding-right: 0px;
	padding-left: 0px;
}
/*.input-field.result-details-summary-value:not(:valid) {
	display: none;
}
.input-field.result-details-summary-value:not(:valid)::after {
	content: "not set";
}*/
/*add up/down arrows to bottom/top jump links*/
.page-bottom-jump-link,
.page-top-jump-link {
	line-height: 20px;
}
.page-bottom-jump-link::after {
	font-size: 20px;
	content: "\25BC";
}
.page-top-jump-link::after {
	font-size: 20px;
	content: "\25B2";
}

#climber-data-container .card.expedition-card {
	border: 1px solid #a193804d;
}
.card.expedition-card,
.card.expedition-card .card-header {
	border-radius: 10px;
}
.card.expedition-card .card-header {
	padding: 0 15px;
	background-color: #f28100;
	/*border-radius: 10px;*/
	color: white;
	align-items: center;
}
.card.expedition-card.canceled .card-header {
	background-color: #cccccc;
}
.card.canceled .expedition-member-card-link-label {
	text-decoration: line-through;
}
.card.expedition-card .card-link-label,
.card.expedition-card .card-link-content,
.card.expedition-card .card-header-content-container {
	color:  white;
	font-size: 20px;
	margin-bottom: 0;
}
.card.expedition-card .card-header-content-container {
	font-size: 14px;
	max-width: 12.5%;
	flex: 1 1 12.5%;
}
.expedition-member-badge-container {
	height: 100%;
}
.result-details-header-badge {
	padding:  12px 5px;
	transition: 0.3s opacity;
}
.expedition-card .card-header .leader-checkbox-container {
	transition: 0.3s all;
}
/*.expedition-card .card-header .leader-checkbox-container.transparent {
	pointer-events: auto;
}*/
.expedition-card .card-header .leader-checkbox-container.transparent .input-field {
	cursor: default;
}
.expedition-card .card-header:hover .leader-checkbox-container.transparent {
	opacity: 1;
	pointer-events: all;
}
.uneditable .expedition-card .card-header:hover .leader-checkbox-container.transparent {
	opacity: 0;
	pointer-events: none;
}
.card.expedition-card .card-header .checkbox-label {
	color: white;
	font-size: 14px;
	line-height: 20px;
}
.member-card-header-chevron-container {
	display: flex;
	justify-content: flex-end;
	flex: 1 1 auto;
	max-width: 10%;
	justify-content: flex-end;
	line-height: 100%;
	align-items: center;
}
.change-expedition-button {
	min-width: 40px;
	width: 40px;
}
.member-card-header-chevron-container > 
.uneditable .input-field.card-link-label.route-code-header-input {
	border:none;
}
.input-field.card-link-label.route-code-header-input {
	border-bottom: 2px solid rgba(255, 255, 255, 0.5);
	/* border-radius: 7px; */
}
.uneditable .input-field.card-link-label.route-code-header-input {
	border-bottom: none;
}
.input-field.card-link-label.route-code-header-input:focus {
	background-color: rgba(255, 255, 255, 0.25);
	border-bottom: none !important;
	border-radius: 7px;
}
.input-field.card-link-label.route-code-header-input > option {
	color: black;
}

#climber-data-container .card.expedition-card,
#climber-data-container .card-body {
	/*background-color: #e5d7c7;*/
}
#climber-data-container .tab-content {
	/*box-shadow: 0 5px 8px 2px #5c52444d;
	background-color: #efe5d9;*/
}

.expedition-data-sub-header,
.data-list-item-header {
	color: #00679b;
}
.data-list-item-header {
	width: 100%;
	margin-top: 25px;
}
.transactions-container-body,
.transactions-header-container {
	width: 100%;
}
.transactions-header-container {
	display: flex;
	justify-content: space-between;
	align-items: center;
}
.data-list {
	width: 100%;
	list-style: none;
	padding: 0;
}
*.data-list-item {
	display: flex;
	width: calc(100% - 30px); /*ul element doesn't honor width so set to 100% of parent minus 15px padding*/  
	padding: 0;
	justify-content: space-between;
	column-gap: 10px;
	margin-top: 15px;
}
*.data-list-col {
	padding: 0;
}
.data-list-item > * {
	padding: 0;
}
.data-list-col.total-col .total-span {
	margin-left: 12px;
}
.data-list .input-field:not(.field-with-units) {
	width: 100%;
	max-width: 100%;
}
/*special styling for transaction list*/
.data-list-item .col.col-13-percent {
	flex: 0 0 13%;
	max-width: 13%;
}
.unit-symbol + .input-field[name="transaction_value"] {
	text-indent: 0;
}
.transactions-tab-pane .refund-post-item .input-field,
.transactions-tab-pane .refund-post-item .unit-symbol {
	color: hsl(0, 0%, 40%);
	font-style: italic;
}
.transactions-tab-pane .refund-post-item .input-field {
	pointer-events: none;
	border-bottom: none;
/*	position: relative; /*allows hiding calendar-date-picker*/
}
.transactions-tab-pane .refund-post-item .input-field::-webkit-calendar-picker-indicator {
	color: transparent;
	background: transparent;
}
.transactions-tab-pane .refund-post-item select.input-field {
	-webkit-appearance: none;
}
.transactions-tab-pane .refund-post-item .delete-transaction-button {
	display: none;
}

/*chevron is small for some reason*/
.card-link ~ * > .fa-chevron-dow {
	font-size: 20px;
}
/*only show the delete button when the user hovers over the card header*/
.show-on-parent-hover {
	opacity: 0;
	transition: 0.3s opacity;
}
.show-children-on-hover:hover .show-on-parent-hover {
	opacity: 1;
}
/* ... */

